# kanade

./: .gitignore  .kanade.rhai  AGENTS.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  kanade-agent.toml  rustc-ice-2026-06-18T13_27_03-763999.txt  rustc-ice-2026-06-18T13_27_03-764000.txt  rustc-ice-2026-06-18T13_27_07-764073.txt  rustc-ice-2026-06-18T13_27_07-764074.txt
.sqlx/: query-01f6a6dff7d1fb3c570ad1d73b1a46bb105cdbe579c98d5ffbaf9cb2d31f37b6.json  query-0328176ec0c66942bf7c518fe10dd928cbe3fcb229c34e3d14b5e892822da4c7.json  query-0516cdc91a070381f096e606bd66f517133941ef21058a48e9278f7eaf4067cd.json  query-0fe8b23713cdd70ae958213e437d70aa14a2943aff8574a339d1a7124b7232d2.json  query-10b2ef395f011f57665fc538e6c59728aae1678e64e63b2759295e524581a4c3.json  query-1290ac69baec0a62138d61859eb0882293ba902f25b5f88e7e111dcb7e5433b7.json  query-1425a019393d37507e69f516ef9c324bb0c93158f2963cb1eceb5e470b6e4feb.json  query-18da08c52409902784372de4bab590cdfb15e4d1b59c6378ec44129a8a30ed30.json  query-25843283640df5c13e13788ea2b6330264e12e080a3bf414fc4bf8e10ae488e4.json  query-270bbb4db2ca59f93a9bcfc1ea81e7b89c4c4fb712455b4faad31ef9b93e434c.json  query-2867cece048e923620fd56cafb154e4f82872ba501b47f23bca83d0349881c49.json  query-29dd6b498898de1b7a86a2fc2b208fe53ab9d794f6735d417efb45ccfcd6fa62.json  query-32c7d11c3585cf1873aa8d715e1cbd6b94ca627470ceb871b81b367332dc20ad.json  query-34da1a1918c7ceefa53802278d282c4aa4434d5bfd9083f250de7018c78d86d9.json  query-3a0f11e4640b6a7ce007aa5f214bede4c0bd6f91e4ecb58d9719bcfa2cda3c4d.json  query-3b430237c8497ea29f12ca401c3ddc9ed6f38cc14cc7d56cf9e4037aa7e57439.json  query-3efd4ccecc6d14fd1bbdee1bf377a8ac566c83ce2850617fbf3093be79d5a173.json  query-49bcd3dd1b01c38a07867e687d7b6d6888f7650824bcb46ce1ed37112ce7c2fe.json  query-4c0c1c99b36cd613e00db99920c8b53710805e7d6685bae11b5b43cbe9496435.json  query-546d199dab03e46200f366feef181c6b67182b91b02e62e77c4b7f7f0916ccd3.json  query-564a03f19b33d82f934dbd2934b63803d25764b760b6b36c6ec29c12dcbfa843.json  query-59750465952720873e57f50884f2f4b4e94c4c1debdc2af9e690c4bc4a95c707.json  query-5a764435e89c917796bdc015eadeb6e1d01a837d2f02dd16e32eea2fe036ab5e.json  query-5bbe757dc04a61b53ed651a3ad4d300f6589e11d576b0c7b801654bdfc0a616c.json  query-61c3a489202ff01f2900a3b3dff176a0de5a6235f82f557dfd82d29357b19b32.json  query-669d8b39a9d07e61887d00b47548731d1ac8e2c7acbfab0eadc7b2a19be78a73.json  query-6c9ed58ee8f9965c904b80f616266f3cf6559fa4504e722f1e309f6880d69f4b.json  query-6d175a59dc80e52b6404652b8aaaf08bbc84403566de90941e1a91f655f15096.json  query-6e239c673ffcf5949d90ea455ff247ffd4feea998bc027f00efc2a7adc9e29de.json  query-7269a92bb65d45d13b9f77d92130ba280fa0fb494bd1d7298cdcffb3439c21e2.json  query-7a2b59b1947b459a3a77d79bd0e64c0361dbdba6c8edf06fdad0ee63d4633ce0.json  query-7a86d9522c91164fa9c1076b600d5bab85c6e4dd57c3d05b0d67e896e8bfdb22.json  query-8a74a5866c06bbf38fb82b4154e85b67114b9de5db72bb71d4b1828d6855c396.json  query-8ae4b6df600f3266c0209cc61aa867bb4831c51d3a1ddf87f9826897f22ae397.json  (+27 more)
apps/agent/: Cargo.toml
apps/agent/src/: agent.rs  config.rs  lib.rs  main.rs  reporter.rs  ws.rs
apps/server/: Cargo.toml  schema.dbml
apps/server/.sqlx/: query-0328176ec0c66942bf7c518fe10dd928cbe3fcb229c34e3d14b5e892822da4c7.json  query-3010c576c91cf432511d77796f512c9325a2e2fd1527a46c4b0879714c029e54.json  query-3dba9968ea2ae641f5d2644d4087919197bc64d13052ecb9a41d0a698944aec2.json  query-445100f1a4b0c78f2d98c049fdfc7fc563cf4bda74f271667118b709ce46372f.json  query-4c0c1c99b36cd613e00db99920c8b53710805e7d6685bae11b5b43cbe9496435.json  query-51931b6b129ed62dc4020e744952d425ec4aec4f55557428f125fe616c862b87.json  query-5c3eb0a72de80223637b0c5d3dad84e87f52dfd7f67810b89ff11fe15a69afdc.json  query-680749c1082c3c5725ef19d3f4c0cac7f7158527d5529f981e0809b924d6bf0d.json  query-687fd10a7f6169988d318185f097c23c95545269947b11665f3fc01f2ff38938.json  query-8aa69a2b6467df9915abcc7a13194e98b2e7fcc0b8a60f06fc4e06a6e2927bbb.json  query-bffbc5233a3ccba70f7705e51e681fa964e0d6a034b89463423946513caa3084.json  query-c434709f66cdf0a180dbc0d680945956001034a5f80666bc0bfcc0e98929439b.json  query-d5323e795abecc0f121e122c0b336138ae16e7fbabe3623c736ca42e7f0dac8a.json
apps/server/examples/: openapi-schema.rs
apps/server/migrations/: 20260604173549_initialize.sql  20260604202637_forge-name-not-null.sql  20260608114609_step-run-id.sql  20260609175004_user-avatar-url.sql  20260609181944_many-things.sql  20260610102644_team-name-not-null.sql  20260612114836_repo-timestamps.sql  20260612172542_repo-url.sql  20260613070144_repo-ssh-key.sql  20260613104958_pipeline-timestamp.sql  20260613112344_pipeline-index.sql  20260613130613_simpler-pipeline.sql  20260613132514_timestamp-not-null.sql  20260613134137_user-timestamp-not-null.sql  20260613134257_user-forge-timestamp-not-null.sql  20260613134414_forge-timestamp-not-null.sql  20260613140826_remove-evaluating.sql  20260614085142_job-depend.sql  20260616063241_pipeline-timestamp.sql  20260617110811_initial-rls.sql  20260617112952_rls-force.sql  20260617184805_agent-thing.sql  20260617195403_agent-rls.sql  20260618045549_user-admin.sql  20260618045907_agent-rls-admin.sql  20260618051230_fix-agent-rls.sql  20260618100356_rls-bypass.sql  20260618104058_agent-job-rls.sql  20260618113652_updated-at.sql  20260618123244_status-context.sql  20260618130607_short-title.sql  20260618135453_secret-notnull.sql
apps/server/src/: auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  security.rs  util.rs
apps/server/src/api/: agent_mgmt.rs  forge.rs  jobs.rs  mod.rs  pipeline.rs  repo.rs  security.rs  team.rs  user.rs
apps/server/src/api/agent/: jobs.rs  mod.rs  steps.rs  types.rs
apps/server/src/commands/: forges.rs  migrate.rs  mod.rs  serve.rs
apps/server/src/data/: db.rs  forges.rs  mod.rs  rows.rs
apps/server/src/forges/: forgejo.rs  mod.rs
apps/server/src/realtime/: mod.rs  types.rs
apps/server/src/routes/: mod.rs
apps/server/src/routes/auth/: callback.rs  jwt.rs  login.rs  mod.rs
apps/server/src/routes/sse/: mod.rs
apps/server/src/routes/webhook/: forgejo.rs  mod.rs
apps/server/src/routes/ws/: mod.rs
(+76 files in other folders)
