[workspace]
resolver = "3"
members = ["apps/agent", "apps/cli", "apps/server", "crates/*"]

[workspace.dependencies]
api-types = { path = "crates/api-types" }
job-executor = { path = "crates/job-executor" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive", "env"] }
figment = { version = "0.10", features = ["env", "toml"] }
tonic = "0.14.6"
poem = { version = "3.1.12", features = ["websocket", "static-files"] }
poem-openapi = { version = "5.1.16", features = ["scalar", "uuid", "chrono"] }
bollard = { version = "0.21.0", features = ["chrono"] }
tokio-util = "0.7.18"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
rustls = { version = "0.23.40", features = ["ring"] }
petgraph = "0.8.3"
secrecy = { version = "0.10", features = ["serde"] }
anyhow = "1.0.102"
uuid = { version = "1.23.2", features = ["v4", "v7", "serde"] }
chrono = "0.4.45"
hmac = "0.13.0"
sha2 = "0.11.0"
futures-util = "0.3.32"
thiserror = "2.0"
hex = "0.4.3"
reqwest = { version = "0.13.4", features = ["json"] }
oauth2 = "5.0.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
urlencoding = "2.1.3"
oauth2-reqwest = "0.1.0-alpha.3"
nanoid = "0.5.0"
aes-gcm = "0.11.0-rc.4"
garde = { version = "0.22.1", features = ["full"] }
rand = "0.10.1"
ssh-key = { version = "0.7.0-rc.10", features = ["ed25519"] }
rhai = { version = "1.25.1", features = ["serde"] }
base64 = "0.22.1"
itertools = "0.14.0"
fred = "10.1.0"
specta = { version = "2.0.0-rc.25", features = ["derive", "uuid"] }
specta-typescript = "0.0.12"
specta-serde = "0.0.12"
tempfile = "3.27.0"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }

event-evaluator = { path = "./crates/event-evaluator" }
