[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
api-types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
figment.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
job-executor.workspace = true
chrono.workspace = true
