[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
figment.workspace = true
serde.workspace = true
poem.workspace = true
poem-openapi.workspace = true
thiserror.workspace = true
secrecy.workspace = true
sqlx.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
